Fixed alignment with user msg

--- a/src/styles/cmps/user-msg.scss
+++ b/src/styles/cmps/user-msg.scss
@@ -1,7 +1,7 @@
 .user-msg {
     padding-inline: 1em;
     position: absolute;
-    bottom: 13%;
+    bottom: 15%;
     right: 50%;
     translate: 50%;
     display: grid;
